--- a/Online_Shopping_Phone/CSS/style.css
+++ b/Online_Shopping_Phone/CSS/style.css
@@ -167,6 +167,7 @@
     text-align: justify;
     padding-left: 20px ;
     padding-right: 20px;
+    text-indent: 50px;
 }
 .read_more{
     color: #70bfc4;
@@ -206,6 +207,7 @@
 /* Avaliable Products  */
 .avaliable_image{
     background-image: url(../Images/iphone13pro.png);
+    /* background-image: url(../Images/iphone13pro.png); */
     display: inline-block;
     width: 200px;
     height: 200px;
@@ -287,4 +289,290 @@
     color: gray;
     display: inline-block;
     margin: 20px 10px 50px;
+}
+
+/* Start Home Page  */
+
+.hr{
+    margin-left: 40%;
+    margin-right: 40%;
+    margin-top: 25px;
+    color: #70bfc4;
+    border-top: 4px solid;
+    border-radius: 3px;
+    margin-bottom: 5px;
+}
+.iPad_series{
+    color: black;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+.iPad_p{
+    text-justify: auto;
+    margin-left: 36%;
+    margin-right: 33%;
+}
+/* Start iPad  */
+/* Start Product  */
+.iPad_img{
+    margin-top: 7px;
+    margin-left: 40%;
+    margin-right: 35%;
+    width: 300px;
+    height: 290px;
+    border-radius: 5px;
+}
+
+.more_iPad{
+    display: inline-block;
+    text-decoration: none;
+    padding:10px 35px 10px 35px;
+    color: white;
+}
+
+
+.more_button{
+    border-color: #70bfc4;
+    /* margin-left: 42%; */
+    border-radius: 5px;
+    background-color: #70bfc4;
+}
+
+.cart_button{
+    border-color: #70bfc4;
+    /* margin-left: 52%; */
+    border-radius: 5px;
+    background-color: #70bfc4;
+    padding:10px 35px 10px 35px;
+    /* margin-top: -40px; */
+}
+
+.cart_iPad{
+    text-decoration: none;
+    color: white;
+}
+/* End iPad  */
+/* End Product  */
+
+/* Start Services */
+.service_img{
+    width: 100%;
+    height: 400px;
+}
+
+.phone_1{
+    position: absolute;
+    top: 160px;
+    left: 10px;
+    border: 2px solid #70bfc4;
+    padding: 5px 7px 5px 7px;
+    border-radius: 6px;
+    background-color: #70bfc4;
+    color: wheat;
+    width: 170px;
+}
+
+.phone_2{
+    position: absolute;
+    top: 250px;
+    left: 380px;
+    border: 2px solid #70bfc4;
+    padding: 5px 7px 5px 7px;
+    border-radius: 6px;
+    background-color: #70bfc4;
+    color: wheat;
+    width: 67px;
+}
+
+.phone_3{
+    position: absolute;
+    top: 430px;
+    left: 660px;
+    border: 2px solid #70bfc4;
+    padding: 5px 7px 5px 7px;
+    border-radius: 6px;
+    background-color: #70bfc4;
+    color: wheat;
+    width: 252px;
+}
+
+ /* Start float image  */
+.float_repair img{
+    border-radius: 5px;
+    margin-top: 10px;
+    width: 580px;
+    height: 530px;
+    background-color: #70bfc4;
+}
+
+.float_repair{
+    border-radius: 5px;
+    margin-top: 40px;
+    display: inline-block;
+    float: right;
+}
+
+.clear{
+    clear: both;
+}
+/* End Float */
+/* Start Offer  */
+.offer_header{
+    margin-top: 70px;
+    margin-left: 77px;
+    color: #70bfc4;
+    margin-bottom: 20px;
+} 
+
+.offer{
+    text-align: justify;
+    margin-left: 77px;
+    text-indent: 40px;
+}
+
+.our_services{
+    color: #70bfc4;
+}
+
+.offer_give{
+    margin-top: 70px;
+    margin-left: 77px;
+    color: #70bfc4;
+    margin-bottom: 20px;
+}
+
+.offer_give h2{
+    margin-bottom: 10px;
+}
+
+.offer_give h3{
+    margin-left: 30px;
+    margin-top: 17px;
+}
+.offer_give ol li{
+    margin-left: 50px;
+    margin-top: 5px;
+}
+/* End Offer  */
+
+/* Start Blog  */
+
+.blogpage{
+    width: 100%;
+    height: 400px;
+    border-radius: 3px;
+}
+
+.blogpage_header{
+    color: #adbcbd;
+    position: absolute;
+    top: 190px;
+    left: 50px;
+    font-style: italic;
+}
+
+.blog_p{
+    text-indent: 30px;
+    text-align: justify;
+    position: absolute;
+    left: 50px;
+    right: 950px;
+    top: 250px;
+    font-size: large;
+    
+}
+
+.blogpage_span{
+    color: #adbcbd;
+    font-size: larger;
+}
+
+.blog_compare{
+    text-align: justify;
+    padding-left: 20px ;
+    padding-right: 20px;
+    color: #70bfc4;
+}
+/* End BLOG Page  */
+
+/* Start About Us  */
+.about_img{
+    width: 100%;
+    height: 450px;
+    border-radius: 3px;
+}
+.web_name{
+    margin-top: 15px;
+    margin-left: 40%;
+    margin-right: 40%;
+    margin-bottom: 15px;
+    color: #70bfc4;
+}
+.web_dev{
+    /* text-align: justify; */
+    text-indent: 25px;
+    margin-top: 15px;
+    margin-left: 40%;
+    margin-right: 40%;
+    margin-bottom: 15px;
+}
+
+.read_about{
+    font-size: large;
+    margin-left: 40%;
+    margin-right: 40%;
+    color: #70bfc4;
+    text-decoration: none;
+}
+/* End About Us  */
+
+/* Start Contact  */
+.map{
+    margin-right: 190px;
+    float: right;
+    margin-top: 30px;
+    border-radius: 5px;
+}
+
+.form{
+    margin-left: 190px;
+    margin-top: 30px;
+}
+
+input[type="text"],input[type="email"],input[type="number"]{
+    width: 30%;
+    height: 35px;
+    outline: none;
+    border: 1px solid #70bfc4;
+    background-color: #70bfc4;
+}
+
+input[type="text"]:focus,input[type="email"]:focus,input[type="number"]:focus{
+    border: 4px solid #70bfc4;
+    background-color: #70bfc4;
+}
+
+#address{
+    width: 30%;
+    border: 1px solid #70bfc4;
+    height: 100px;
+    outline: none;
+    background-color: #70bfc4;
+}
+
+button{
+    width: 120px;
+    height: 45px;
+    border-radius: 5px;
+    background-color: #70bfc4;
+}
+.button{
+    margin-top: 9px;
+    border: 1px solid;
+    width: 130px;
+    padding: 10px 15px 10px 15px;
+    border-radius: 5px;
+    background-color: #70bfc4;
 }
