--- a/Online_Shopping_Phone/CSS/style.css
+++ b/Online_Shopping_Phone/CSS/style.css
@@ -325,34 +325,45 @@
     border-radius: 5px;
 }
 
-.more_iPad{
+.more_button{
+    border: none;
+    color: white;
+}
+.cart_button{
+    border: none;
+    color: white;
+}
+
+/* .more_iPad{
+    
     display: inline-block;
     text-decoration: none;
-    padding:10px 35px 10px 35px;
-    color: white;
-}
+    /* padding:10px 35px 10px 35px; */
+    /* color: white;
+} */
 
 
-.more_button{
+/* .more_button{
+    display: inline-block;
     border-color: #70bfc4;
-    /* margin-left: 42%; */
-    border-radius: 5px;
-    background-color: #70bfc4;
-}
-
-.cart_button{
-    border-color: #70bfc4;
-    /* margin-left: 52%; */
     border-radius: 5px;
     background-color: #70bfc4;
     padding:10px 35px 10px 35px;
-    /* margin-top: -40px; */
-}
+    margin-top: 10px;
+} */
 
-.cart_iPad{
+/* .cart_button{
+    display: inline-block;
+    border-color: #70bfc4;
+    border-radius: 5px;
+    background-color: #70bfc4;
+    padding:10px 35px 10px 35px;
+} */
+
+/* .cart_iPad{
     text-decoration: none;
     color: white;
-}
+} */
 /* End iPad  */
 /* End Product  */
 
