--- a/JS/style.css
+++ b/JS/style.css
@@ -1,3 +1,16 @@
 h1{
     color: red;
+    text-align: center;
+}
+
+#time{
+    background-color: #a83287;
+    color: aqua;
+    padding: 50px;
+    font-size: xx-large;
+    text-align: center;
+    width: 200px;
+    height: 50px;
+    border-radius: 35%;
+    margin: auto;
 }
