--- a/JS/style.css
+++ b/JS/style.css
@@ -14,3 +14,11 @@ h1{
     border-radius: 35%;
     margin: auto;
 }
+
+.student_form{
+    margin-left:  40%;
+    width: 200px;
+    height: 150px;
+    margin-bottom: 150px;
+    background-color: #a83287;
+}
