--- a/Have_Fun/CSS/style.css
+++ b/Have_Fun/CSS/style.css
@@ -54,6 +54,9 @@
 
 .nav_item:hover{
     color: pink;
+    letter-spacing: 3px;
+    font-size: 17px;
+    transition-duration: .3s;
 }
 
 /* NOTIFICATIONS SHOPPING  */
